Added delete products and added functionality for create
